// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackSelection /> should render with empty content pack 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-offset-1"
    >
      <h2>
        General Information
      </h2>
      <br />
      <form
        className="content-selection-form"
        id="content-selection-form"
        onSubmit={[Function]}
      >
        <fieldset>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="name"
            >
              Name
            </label>
            <span>
              <input
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="name"
                label="Name"
                maxLength={250}
                name="name"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value=""
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Required. Give a descriptive name for this content pack.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="summary"
            >
              Summary
            </label>
            <span>
              <input
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="summary"
                label="Summary"
                maxLength={250}
                name="summary"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value=""
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Required. Give a short summary of the content pack.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="description"
            >
              Description
            </label>
            <span>
              <textarea
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="description"
                label="Description"
                name="description"
                onChange={[Function]}
                placeholder=""
                rows={6}
                type="textarea"
                value=""
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Give a long description of the content pack in markdown.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="vendor"
            >
              Vendor
            </label>
            <span>
              <input
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="vendor"
                label="Vendor"
                maxLength={250}
                name="vendor"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value=""
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Required. Who did this content pack and how can he be reached. e.g Name and eMail
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="url"
            >
              URL
            </label>
            <span>
              <input
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="url"
                label="URL"
                maxLength={250}
                name="url"
                onChange={[Function]}
                placeholder=""
                type="text"
                value=""
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Where can I find the content pack. e.g. github url
              </span>
            </span>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-offset-1"
    >
      <h2>
        Content Pack selection
      </h2>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-offset-1"
    >
      <div
        className="search"
        style={
          Object {
            "marginTop": 15,
          }
        }
      >
        <form
          className="form-inline"
          onSubmit={[Function]}
        >
          <div
            className="form-group has-feedback"
          >
            <input
              autoComplete="off"
              className="query form-control"
              id="common-search-form-query-input"
              onChange={[Function]}
              placeholder="Enter search query..."
              spellCheck="false"
              style={
                Object {
                  "width": "auto",
                }
              }
              type="text"
              value=""
            />
          </div>
          <div
            className="form-group"
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            <button
              className="submit-button Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
              disabled={false}
              type="submit"
            >
              Filter
            </button>
          </div>
          <div
            className="form-group"
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            <button
              className="reset-button Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="reset"
            >
              Reset
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-8 col-sm-offset-1"
    >
      <ul
        className="list"
      />
    </div>
  </div>
</div>
`;

exports[`<ContentPackSelection /> should render with filled content pack 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-offset-1"
    >
      <h2>
        General Information
      </h2>
      <br />
      <form
        className="content-selection-form"
        id="content-selection-form"
        onSubmit={[Function]}
      >
        <fieldset>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="name"
            >
              Name
            </label>
            <span>
              <input
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="name"
                label="Name"
                maxLength={250}
                name="name"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="name"
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Required. Give a descriptive name for this content pack.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="summary"
            >
              Summary
            </label>
            <span>
              <input
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="summary"
                label="Summary"
                maxLength={250}
                name="summary"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="summary"
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Required. Give a short summary of the content pack.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="description"
            >
              Description
            </label>
            <span>
              <textarea
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="description"
                label="Description"
                name="description"
                onChange={[Function]}
                placeholder=""
                rows={6}
                type="textarea"
                value="description"
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Give a long description of the content pack in markdown.
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="vendor"
            >
              Vendor
            </label>
            <span>
              <input
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="vendor"
                label="Vendor"
                maxLength={250}
                name="vendor"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="vendor"
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Required. Who did this content pack and how can he be reached. e.g Name and eMail
              </span>
            </span>
          </div>
          <div
            className="form-group"
          >
            <label
              className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
              htmlFor="url"
            >
              URL
            </label>
            <span>
              <input
                className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                id="url"
                label="URL"
                maxLength={250}
                name="url"
                onChange={[Function]}
                placeholder=""
                type="text"
                value="http://example.com"
              />
              <span
                className="HelpBlock-i8is92-0 huFHQV help-block"
              >
                Where can I find the content pack. e.g. github url
              </span>
            </span>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-offset-1"
    >
      <h2>
        Content Pack selection
      </h2>
      <span
        className="HelpBlock-i8is92-0 huFHQV help-block"
      >
        You can select between installed entities from the server (
        <i
          className="fa fa-server"
        />
        ) or entities from the former content pack revision (
        <i
          className="fa fa-archive contentPackEntity"
        />
        ).
      </span>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-offset-1"
    >
      <div
        className="search"
        style={
          Object {
            "marginTop": 15,
          }
        }
      >
        <form
          className="form-inline"
          onSubmit={[Function]}
        >
          <div
            className="form-group has-feedback"
          >
            <input
              autoComplete="off"
              className="query form-control"
              id="common-search-form-query-input"
              onChange={[Function]}
              placeholder="Enter search query..."
              spellCheck="false"
              style={
                Object {
                  "width": "auto",
                }
              }
              type="text"
              value=""
            />
          </div>
          <div
            className="form-group"
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            <button
              className="submit-button Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
              disabled={false}
              type="submit"
            >
              Filter
            </button>
          </div>
          <div
            className="form-group"
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            <button
              className="reset-button Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="reset"
            >
              Reset
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-8 col-sm-8 col-sm-offset-1"
    >
      <ul
        className="list"
      >
        <li
          className=""
        >
          <div
            className="listItemContainer"
          >
            <label
              className="checkbox-inline"
              title=""
            >
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
            </label>
            <div
              className="expandBoxContainer"
            >
              <div
                className="fa-stack expandBox"
                onClick={[Function]}
                role="button"
                tabIndex={0}
              >
                <i
                  className="fa fa-circle-thin fa-stack-1x iconBackground"
                />
                <i
                  className="fa fa-angle-up fa-stack-1x"
                />
              </div>
            </div>
            <span
              className="header"
            >
              <span
                onClick={[Function]}
                role="button"
                tabIndex={0}
              >
                Spaceship
              </span>
            </span>
          </div>
          <div
            className="expandableContent"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;
